--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -67,12 +67,13 @@ As both equations admit closed explicit solutions, we report the relative $L^2$ 
 
 \begin{figure}[tb]
   \centering
-  \includegraphics{../kfac_pinns_exp/exp18_groupplot_poisson5d/loss.pdf}
+  \includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error.pdf}
+  \includegraphics{../kfac_pinns_exp/exp18_groupplot_poisson5d/l2_error.pdf}
   \caption{Scaling behaviour of different optimizers for learning the solution of a 5d-Poisson equation w.r.t.
     neural network size under a given time budget of $3\cdot 10^3\,\text{s}$ on an RTX 6000 GPU.}
   \label{fig:pedagogical-example}
 \end{figure}
-\todo[inline]{would present the time plots; }
+\todo[inline]{I think we should only present the time plots to safe space, move everything else to the appendix}
 
 \subsection{A 100D Poisson equation}
 
