Update on Overleaf.

--- a/paper/references.bib
+++ b/paper/references.bib
@@ -604,3 +604,10 @@
 }
 
 
+@misc{wandb,
+title = {Experiment Tracking with Weights and Biases},
+year = {2020},
+note = {Software available from wandb.ai},
+url={https://www.wandb.ai/},
+author = {Weights and Biases},
+}
