--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -28,7 +28,7 @@
 \section{Experimental Details and Additional Results}
 \input{sections/experimental_details.tex}
 
-\section{Pseudo-Code: KFAC for the Poisson Equation}
+\section{Pseudo-Code: KFAC for the Poisson Equation}\label{app:pseudo}
 \input{sections/pseudocode_poisson.tex}
 
 %\section{Derivation of KFAC general PDEs}\label{app:generalPDEs}
