--- a/paper/main.tex
+++ b/paper/main.tex
@@ -4,7 +4,7 @@
 % \PassOptionsToPackage{numbers, compress}{natbib}
 % before loading neurips_2023
 
-\usepackage[preprint]{neurips_2024}
+\usepackage{neurips_2024}
 \usepackage{comment}
 \usepackage[most]{tcolorbox}
 
@@ -33,17 +33,18 @@
 \maketitle
 
 \begin{abstract}
-Physics-Informed Neural Networks (PINNs) are infamous for being hard to train. 
-Recently, second-order methods like natural gradients and Gauss-Newton methods have shown promising performance improving the accuracy by several orders of magnitude over first-order optimizers. 
-However, these methods require solving a linear system of the size of the network's parameter space and therefore come with a high computational cost per iteration. 
-Using higher-order forward mode differentiation, we perceive the computational graph of the input derivatives of the network as a larger network that shares the weights of the original network for the individual partial derivatives. 
-Utilizing this interpretation, we propose a Kronecker-factored approximation of preconditioners involving PDE-specific terms that greatly reduces the computational complexity of the individual iterations. 
-We provide an efficient implementation and an experimental evaluation targeting large neural networks and PDEs posed in high spatial dimensions. 
-%To train PINNs efficiently, it has been observed that taking the geometry implied by the PDE operator.
-%Existing methods that consider this geometry compute and invert the full Gramian.
-%However, these ENGD-based methods do not scale well to architectures with many parameters due to the quadratic memory and cubic time complexity of storing and inverting the Gramian.
-%The challenge to develop approximations to the Gramian is that it requires taking the parameter derivative of the PDE operator, which itself contains higher-order derivative.
-%Here, we propose a Kronecker-factored approximation for the Gramian, which scales more favourably than existing approaches in terms of both time and memory, while showing similar performance downstream.
+Physics-Informed Neural Networks (PINNs) are infamous for being hard to train.
+Recently, second-order methods based on natural gradient and Gauss-Newton methods have shown promising performance, improving the accuracy achieved by first-order methods by several orders of magnitude. 
+While promising, the proposed methods only scale to networks with a few thousand parameters due to the high computational cost to evaluate, store, and invert the curvature matrix.
+We propose Kronecker-factored approximate curvature (KFAC) for PINN losses that greatly reduces the computational cost and allows scaling to much larger networks.
+Our approach goes beyond the popular KFAC for traditional deep learning problems as it captures contributions from a PDE's differential operator that are crucial for optimization. 
+To establish KFAC for such losses, 
+we use Taylor-mode automatic differentiation to describe the differential operator's computation graph as a forward network with shared weights which allows us to 
+%we provide new insights into the differential operator's computation graph using Taylor-mode automatic differentiation and 
+%combine them with a recently proposed generalization of KFAC to linear layers with weight sharing.
+apply a variant of KFAC for networks with weight-sharing. 
+%Specifically, we show that linear layers inside a neural net process multiple vectors containing partial derivatives, hence act like linear layers with weight sharing which allows for a straightforward KFAC approximation.
+Empirically, we find that our KFAC-based optimizers are competitive with expensive second-order methods on small problems, scale more favorably to higher-dimensional neural networks and PDEs, and consistently outperform first-order methods.
 \end{abstract}
 
 \section{Introduction}
