--- a/paper/sections/experiments.tex
+++ b/paper/sections/experiments.tex
@@ -44,14 +44,14 @@ As both equations admit closed explicit solutions, we report the relative $L^2$ 
 
 \begin{figure}
     \centering
-    \includegraphics{}
+    \includegraphics{../kfac_pinns_exp/exp17_groupplot_poisson2d/l2_error_over_time.pdf}
     \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:2D-Poisson} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; }
     \label{fig:2D-Poisson}
 \end{figure}
 
 \begin{figure}
     \centering
-    \includegraphics{}
+    % \includegraphics{}
     \caption{We report the performance of different optimizers on the Poisson equation~\eqref{eq:1D-Heat} measured in relative $L^2$ error against wall clock time for architectures with different parameter dimensions $D$; }
     \label{fig:1D-heat}
 \end{figure}
